syntax = "proto3";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "WOSenderDB";

service WODownloader{
	rpc DownloadDatabaseEntities (RequestDownload) returns (stream ResponseDownload);
}


message ClothIntegrationIventProto{
	ClothProto Cloth = 1;
	repeated ClothHasMaterialsProto MaterialIDs = 2;
	repeated MaterialProto MaterialsValues = 3;
	repeated PhotoProto Photos = 4;
}

message PhysiqueIntegrationEventProto{
	PhysiqueProto Physique = 1;
	repeated SetProto Sets = 2;
}

message SetIntegrationEventProto{
	SetProto Set = 1;
	SeasonProto Season = 2;
	repeated SetHasClothesProto ClothIDs = 3;
}

message PersonIntegrationEventProto{
	PersonProto Person = 1;
	repeated PhysiqueProto Physiques = 2;
}

message ClothProto{
	int32 ID = 1;
	string Name = 2;
	google.protobuf.StringValue Description = 3;
	google.protobuf.Int32Value Rating = 4;
	google.protobuf.StringValue Size = 5;
}

message PersonProto{
	int32 ID = 1;
	string Name = 2;
	google.protobuf.StringValue Type = 3;
}

message PhysiqueProto{
	int32 ID = 1;
	int32 Weight = 2;
	int32 Growth = 3;
	int32 Force = 4;
	google.protobuf.StringValue Description = 5;
	int32 PersonID = 6;
}

message SetProto{
	int32 ID = 1;
	string Name = 2;
	google.protobuf.StringValue Description = 3;
	int32 PhysiqueID = 4;
	int32 SeasonID = 5;
}

message SeasonProto{
	int32 ID = 1;
	string Name = 2;
}

message SetHasClothesProto{
	int32 ID = 1;
	int32 ClothID = 2;
	int32 SetID = 3;
}

message MaterialProto{
	int32 ID = 1;
	string Name = 2;
	google.protobuf.StringValue Description = 3;
}

message ClothHasMaterialsProto{
	int32 ID = 1;
	int32 ClothID = 2;
	int32 MaterialID = 3;
}

message PhotoProto{
	int32 ID = 1;
	string Name = 2;
	string HashCode = 3;
	bool IsDBStored = 4;
	int32 ClothID = 5;
}

message RequestDownload{
	bool Proceed = 1;
}

message ResponseDownload{
	int32 PackageNumber = 1;
	int32 PackageSize = 2;
	repeated ClothIntegrationIventProto ClothIEs = 3;
	repeated PersonIntegrationEventProto PersonIEs = 4;
	repeated SetIntegrationEventProto SetIEs = 5;
}